// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PollContainer /> renders correctly when errored 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <PollContainer
    config={
      Object {
        "theme": Object {
          "primary": "#000000",
          "secondary": "#ffffff",
        },
      }
    }
    content={
      Object {
        "cards": Array [
          Object {
            "copy": "Looks a bit more Bruce Forsyth than Tom Selleck...",
            "iconImg": "https://www.thesun.co.uk/wp-content/uploads/2018/10/Chevron.png",
            "id": "chevron",
            "imageDesktop": "",
            "imageMobile": "https://www.thesun.co.uk/wp-content/uploads/2018/10/handlebar.jpg",
            "title": "The Chevron",
          },
          Object {
            "copy": "Get a grip!",
            "iconImg": "https://www.thesun.co.uk/wp-content/uploads/2018/10/Handlebar.png",
            "id": "handlebar",
            "imageDesktop": "",
            "imageMobile": "",
            "title": "The Handlebar",
          },
          Object {
            "copy": "Work it out with this",
            "iconImg": "https://www.thesun.co.uk/wp-content/uploads/2018/10/Pencil.png",
            "id": "pencil",
            "imageDesktop": "",
            "imageMobile": "",
            "title": "The Pencil",
          },
        ],
        "introScreen": Object {
          "cta": "Read more from:",
          "ctaLink": "#MOVEMBER",
          "ctaUrl": "http://www.thesun.co.uk",
          "imageDesktop": "",
          "imageMobile": "https://www.thesun.co.uk/wp-content/uploads/2018/10/IntroScreen@2.png",
          "introText": Array [
            "Jeremy Kyle needs help picking his moustache style.",
            "Flick through the gallery of images and vote on your favourite at the end.",
          ],
          "title": "Jeremy Styles",
        },
        "resultsScreen": Object {
          "bkgndImgDesktop": "",
          "bkgndImgMobile": "https://www.thesun.co.uk/wp-content/uploads/2018/10/handlebar.jpg",
          "cta": "Read more from:",
          "ctaLink": "#MOVEMBER",
          "ctaTxt": "Thanks for voting!",
          "ctaUrl": "http://www.thesun.co.uk",
          "introTxt": "Here’s what everyone else thought, did you agree with the others?",
          "title": "The Results",
        },
        "teaserScreen": Object {
          "copy": "copy",
          "cta": "cta",
          "imageDesktop": "http://www.thesun.co.uk/imageDesktop.jpg",
          "imageMobile": "http://www.thesun.co.uk/imageMobile.jpg",
          "title": "title",
        },
        "voteScreen": Object {
          "bkgndImgDesktop": "desktop.jpg",
          "bkgndImgMobile": "handlebar-mobile.jpg",
          "cta": "Read more from:",
          "ctaLink": "#MOVEMBER",
          "ctaTxt": "Tell us what you think",
          "ctaUrl": "http://www.thesun.co.uk",
          "introTxt": "Which do you think looked best? Vote on your favourite moustache",
          "title": "Have your say",
        },
      }
    }
    id="card"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "backgroundColour": "#ffffff",
      "theme": Object {
        "primary": "#eb1701",
        "secondary": "#a5171c",
      },
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "backgroundColour": "#ffffff",
        "theme": Object {
          "primary": "#eb1701",
          "secondary": "#a5171c",
        },
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`<PollContainer /> renders correctly when not errored 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <PollContainer
    config={
      Object {
        "theme": Object {
          "primary": "#000000",
          "secondary": "#ffffff",
        },
      }
    }
    content={
      Object {
        "cards": Array [
          Object {
            "copy": "Looks a bit more Bruce Forsyth than Tom Selleck...",
            "iconImg": "https://www.thesun.co.uk/wp-content/uploads/2018/10/Chevron.png",
            "id": "chevron",
            "imageDesktop": "",
            "imageMobile": "https://www.thesun.co.uk/wp-content/uploads/2018/10/handlebar.jpg",
            "title": "The Chevron",
          },
          Object {
            "copy": "Get a grip!",
            "iconImg": "https://www.thesun.co.uk/wp-content/uploads/2018/10/Handlebar.png",
            "id": "handlebar",
            "imageDesktop": "",
            "imageMobile": "",
            "title": "The Handlebar",
          },
          Object {
            "copy": "Work it out with this",
            "iconImg": "https://www.thesun.co.uk/wp-content/uploads/2018/10/Pencil.png",
            "id": "pencil",
            "imageDesktop": "",
            "imageMobile": "",
            "title": "The Pencil",
          },
        ],
        "introScreen": Object {
          "cta": "Read more from:",
          "ctaLink": "#MOVEMBER",
          "ctaUrl": "http://www.thesun.co.uk",
          "imageDesktop": "",
          "imageMobile": "https://www.thesun.co.uk/wp-content/uploads/2018/10/IntroScreen@2.png",
          "introText": Array [
            "Jeremy Kyle needs help picking his moustache style.",
            "Flick through the gallery of images and vote on your favourite at the end.",
          ],
          "title": "Jeremy Styles",
        },
        "resultsScreen": Object {
          "bkgndImgDesktop": "",
          "bkgndImgMobile": "https://www.thesun.co.uk/wp-content/uploads/2018/10/handlebar.jpg",
          "cta": "Read more from:",
          "ctaLink": "#MOVEMBER",
          "ctaTxt": "Thanks for voting!",
          "ctaUrl": "http://www.thesun.co.uk",
          "introTxt": "Here’s what everyone else thought, did you agree with the others?",
          "title": "The Results",
        },
        "teaserScreen": Object {
          "copy": "copy",
          "cta": "cta",
          "imageDesktop": "http://www.thesun.co.uk/imageDesktop.jpg",
          "imageMobile": "http://www.thesun.co.uk/imageMobile.jpg",
          "title": "title",
        },
        "voteScreen": Object {
          "bkgndImgDesktop": "desktop.jpg",
          "bkgndImgMobile": "handlebar-mobile.jpg",
          "cta": "Read more from:",
          "ctaLink": "#MOVEMBER",
          "ctaTxt": "Tell us what you think",
          "ctaUrl": "http://www.thesun.co.uk",
          "introTxt": "Which do you think looked best? Vote on your favourite moustache",
          "title": "Have your say",
        },
      }
    }
    id="card"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div>
          <Unknown
            cta="Read more from:"
            ctaLink="#MOVEMBER"
            ctaUrl="http://www.thesun.co.uk"
            imageDesktop=""
            imageMobile="https://www.thesun.co.uk/wp-content/uploads/2018/10/IntroScreen@2.png"
            introText={
              Array [
                "Jeremy Kyle needs help picking his moustache style.",
                "Flick through the gallery of images and vote on your favourite at the end.",
              ]
            }
            title="Jeremy Styles"
          />
          <glamorous(glamorous(div))>
            <glamorous(div)
              disabled={false}
              onClick={[Function]}
            >
              <Icon
                iconColour="#ffffff"
                iconName="chevron-solid-right"
                iconSize={16}
              />
            </glamorous(div)>
          </glamorous(glamorous(div))>
        </div>,
        false,
        false,
        false,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <Unknown
              cta="Read more from:"
              ctaLink="#MOVEMBER"
              ctaUrl="http://www.thesun.co.uk"
              imageDesktop=""
              imageMobile="https://www.thesun.co.uk/wp-content/uploads/2018/10/IntroScreen@2.png"
              introText={
                Array [
                  "Jeremy Kyle needs help picking his moustache style.",
                  "Flick through the gallery of images and vote on your favourite at the end.",
                ]
              }
              title="Jeremy Styles"
            />,
            <glamorous(glamorous(div))>
              <glamorous(div)
                disabled={false}
                onClick={[Function]}
              >
                <Icon
                  iconColour="#ffffff"
                  iconName="chevron-solid-right"
                  iconSize={16}
                />
              </glamorous(div)>
            </glamorous(glamorous(div))>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "cta": "Read more from:",
              "ctaLink": "#MOVEMBER",
              "ctaUrl": "http://www.thesun.co.uk",
              "imageDesktop": "",
              "imageMobile": "https://www.thesun.co.uk/wp-content/uploads/2018/10/IntroScreen@2.png",
              "introText": Array [
                "Jeremy Kyle needs help picking his moustache style.",
                "Flick through the gallery of images and vote on your favourite at the end.",
              ],
              "title": "Jeremy Styles",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <glamorous(div)
                disabled={false}
                onClick={[Function]}
              >
                <Icon
                  iconColour="#ffffff"
                  iconName="chevron-solid-right"
                  iconSize={16}
                />
              </glamorous(div)>,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <Icon
                  iconColour="#ffffff"
                  iconName="chevron-solid-right"
                  iconSize={16}
                />,
                "disabled": false,
                "onClick": [Function],
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "iconColour": "#ffffff",
                  "iconName": "chevron-solid-right",
                  "iconSize": 16,
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": [Function],
            },
            "type": [Function],
          },
        ],
        "type": "div",
      },
      false,
      false,
      false,
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div>
            <Unknown
              cta="Read more from:"
              ctaLink="#MOVEMBER"
              ctaUrl="http://www.thesun.co.uk"
              imageDesktop=""
              imageMobile="https://www.thesun.co.uk/wp-content/uploads/2018/10/IntroScreen@2.png"
              introText={
                Array [
                  "Jeremy Kyle needs help picking his moustache style.",
                  "Flick through the gallery of images and vote on your favourite at the end.",
                ]
              }
              title="Jeremy Styles"
            />
            <glamorous(glamorous(div))>
              <glamorous(div)
                disabled={false}
                onClick={[Function]}
              >
                <Icon
                  iconColour="#ffffff"
                  iconName="chevron-solid-right"
                  iconSize={16}
                />
              </glamorous(div)>
            </glamorous(glamorous(div))>
          </div>,
          false,
          false,
          false,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <Unknown
                cta="Read more from:"
                ctaLink="#MOVEMBER"
                ctaUrl="http://www.thesun.co.uk"
                imageDesktop=""
                imageMobile="https://www.thesun.co.uk/wp-content/uploads/2018/10/IntroScreen@2.png"
                introText={
                  Array [
                    "Jeremy Kyle needs help picking his moustache style.",
                    "Flick through the gallery of images and vote on your favourite at the end.",
                  ]
                }
                title="Jeremy Styles"
              />,
              <glamorous(glamorous(div))>
                <glamorous(div)
                  disabled={false}
                  onClick={[Function]}
                >
                  <Icon
                    iconColour="#ffffff"
                    iconName="chevron-solid-right"
                    iconSize={16}
                  />
                </glamorous(div)>
              </glamorous(glamorous(div))>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "cta": "Read more from:",
                "ctaLink": "#MOVEMBER",
                "ctaUrl": "http://www.thesun.co.uk",
                "imageDesktop": "",
                "imageMobile": "https://www.thesun.co.uk/wp-content/uploads/2018/10/IntroScreen@2.png",
                "introText": Array [
                  "Jeremy Kyle needs help picking his moustache style.",
                  "Flick through the gallery of images and vote on your favourite at the end.",
                ],
                "title": "Jeremy Styles",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <glamorous(div)
                  disabled={false}
                  onClick={[Function]}
                >
                  <Icon
                    iconColour="#ffffff"
                    iconName="chevron-solid-right"
                    iconSize={16}
                  />
                </glamorous(div)>,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": <Icon
                    iconColour="#ffffff"
                    iconName="chevron-solid-right"
                    iconSize={16}
                  />,
                  "disabled": false,
                  "onClick": [Function],
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "iconColour": "#ffffff",
                    "iconName": "chevron-solid-right",
                    "iconSize": 16,
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                "type": [Function],
              },
              "type": [Function],
            },
          ],
          "type": "div",
        },
        false,
        false,
        false,
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
